Add Employees by Job Title and by Gender charts
- Added `@nivo` library
- Added a simple ResponsivePie Chart for Employees by Job Title
- Added a simple bar char for Employees by Gender

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@ body {
 
 .table-container {
     margin-top: 20px;
-    height: 430px;
+    height: 340px;
     overflow-y: auto;
     display: block;
-    border: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
 
 .table-employees thead {
